[tool.poetry]
name = "repl_nix_Owlie-Webscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
oauth2client = "^4.1.3"
pytz = "^2023.3"
requests = "^2.31.0"
bs4 = "^0.0.1"
gspread = "^5.10.0"
selenium = "4.10.x"
webdriver-manager = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
